refactoring ajout du Loader.as3proj changement des sons

--- a/bin/index.html
+++ b/bin/index.html
@@ -21,7 +21,7 @@
 			id:"Hearth"
 		};
 		swfobject.embedSWF(
-			"Hearth.swf",
+			"Loader.swf",
 			"altContent", "1024px", "768px", "11.3.0",
 			"expressInstall.swf",
 			flashvars, params, attributes);
